--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "guessing_game"
+name = "rust_rate"
 version = "0.1.0"
 authors = ["Max Murphy-Skvorzov <mmurphy@telemetry.com>"]
 
